--- a/TraceIt/Views/StandardSelectionPage.xaml
+++ b/TraceIt/Views/StandardSelectionPage.xaml
@@ -5,11 +5,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="TraceIt.Views.StandardSelectionPage">
+    
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <AbsoluteLayout>
+
+            <CollectionView>
+
+            </CollectionView>
+
+        </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
