--- a/TraceIt/Views/SubjectSelectionPage.xaml
+++ b/TraceIt/Views/SubjectSelectionPage.xaml
@@ -25,19 +25,23 @@ xmlns:listview="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfL
 
         <StackLayout Padding="20,10" BackgroundColor="White">
 
-            <listview:SfListView x:Name="subjectsListView" ItemSpacing="10"
-                                 SelectionMode="Multiple">
+            <listview:SfListView x:Name="subjectsListView" ItemSpacing="7"
+                                 SelectionMode="Multiple"
+                                 ItemSize="50">
 
                 <listview:SfListView.ItemTemplate>
                     <DataTemplate>
-                        <Frame BackgroundColor="Aqua"
+                        <Frame BackgroundColor="#f5f5f5"
                                HasShadow="False"
                                Padding="20,10,0,10"
-                               CornerRadius="45"
-                               >
+                               CornerRadius="20"
+                               BorderColor="#dedede">
+                            
                             <StackLayout>
-                                <Label Text="Text" TextColor="Black"/>
+                                <Label Text="{Binding Name}" TextColor="Black"
+                                       VerticalOptions="CenterAndExpand"/>
                             </StackLayout>
+                            
                         </Frame>
                     </DataTemplate>
                 </listview:SfListView.ItemTemplate>
@@ -47,10 +51,14 @@ xmlns:listview="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfL
                         <Frame BackgroundColor="Orange"
                                HasShadow="False"
                                Padding="20,10,0,10"
-                               CornerRadius="45">
+                               CornerRadius="20"
+                               BorderColor="#dedede">
+                            
                             <StackLayout>
-                                <Label Text="Text" TextColor="White"/>
+                                <Label Text="{Binding Name}" TextColor="White"
+                                       VerticalOptions="CenterAndExpand"/>
                             </StackLayout>
+                            
                         </Frame>
                     </DataTemplate>
                 </listview:SfListView.SelectedItemTemplate>
