--- a/TraceIt/Views/SubjectSelectionPage.xaml
+++ b/TraceIt/Views/SubjectSelectionPage.xaml
@@ -4,9 +4,9 @@ xmlns:listview="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfL
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:ViewModels="clr-namespace:TraceIt.ViewModels"
              mc:Ignorable="d"
-             x:Class="TraceIt.Views.SubjectSelectionPage">
+             x:Class="TraceIt.Views.SubjectSelectionPage"
+             xmlns:gradient="clr-namespace:Syncfusion.XForms.Graphics;assembly=Syncfusion.Core.XForms">
 
     <ContentPage.Resources>
 
@@ -23,11 +23,18 @@ xmlns:listview="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfL
 
     <ContentPage.Content>
 
-        <StackLayout Padding="20,10" BackgroundColor="White">
+        <AbsoluteLayout BackgroundColor="White"
+                        VerticalOptions="FillAndExpand"
+                        HorizontalOptions="FillAndExpand">
 
             <listview:SfListView x:Name="subjectsListView" ItemSpacing="7"
                                  SelectionMode="Multiple"
-                                 ItemSize="50">
+                                 ItemSize="50"
+                                 AbsoluteLayout.LayoutFlags="All"
+                                 AbsoluteLayout.LayoutBounds=".5, .5, 1, 1"
+                                 VerticalOptions="FillAndExpand"
+                                 HorizontalOptions="FillAndExpand"
+                                 Padding="20, 10">
 
                 <listview:SfListView.ItemTemplate>
                     <DataTemplate>
@@ -36,12 +43,12 @@ xmlns:listview="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfL
                                Padding="20,10,0,10"
                                CornerRadius="20"
                                BorderColor="#dedede">
-                            
+
                             <StackLayout>
                                 <Label Text="{Binding Name}" TextColor="Black"
                                        VerticalOptions="CenterAndExpand"/>
                             </StackLayout>
-                            
+
                         </Frame>
                     </DataTemplate>
                 </listview:SfListView.ItemTemplate>
@@ -53,18 +60,49 @@ xmlns:listview="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfL
                                Padding="20,10,0,10"
                                CornerRadius="20"
                                BorderColor="#dedede">
-                            
+
                             <StackLayout>
                                 <Label Text="{Binding Name}" TextColor="White"
                                        VerticalOptions="CenterAndExpand"/>
                             </StackLayout>
-                            
+
                         </Frame>
                     </DataTemplate>
                 </listview:SfListView.SelectedItemTemplate>
-                
+
             </listview:SfListView>
 
-        </StackLayout>
+            <Frame AbsoluteLayout.LayoutFlags="All"
+                   AbsoluteLayout.LayoutBounds="0, 1, 1, 0.08"
+                   Margin="-3, -15"
+                   Padding="0"
+                   BackgroundColor="Transparent">
+                
+                <StackLayout BackgroundColor="Transparent" VerticalOptions="FillAndExpand"
+                             HorizontalOptions="FillAndExpand">
+                    
+                    <gradient:SfGradientView>
+                        <gradient:SfGradientView.BackgroundBrush>
+                            <gradient:SfLinearGradientBrush>
+                                <gradient:SfLinearGradientBrush.GradientStops>
+                                    <gradient:SfGradientStop Color="#0012FF" Offset="0.0"/>
+                                    <gradient:SfGradientStop Color="#000B98" Offset="1.0"/>
+                                </gradient:SfLinearGradientBrush.GradientStops>
+                            </gradient:SfLinearGradientBrush>
+                        </gradient:SfGradientView.BackgroundBrush>
+                    </gradient:SfGradientView>
+                    
+                    <Button Text="CONFIRM"
+                    TextColor="White"
+                    BackgroundColor="Transparent"
+                    Padding="0, 0, 0, 5">
+
+                    </Button>
+                </StackLayout>
+
+
+            </Frame>
+
+        </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
